--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,22 @@
+h1 {
+  font-family: "Anton", sans-serif;
+  font-size: 20px;
+}
+h3 {
+  font-family: "Anton", sans-serif;
+  font-size: 40px;
+}
+li {
+  font-family: "Montserrat", sans-serif;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+ul {
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+}
 .weather-app-wrapper {
   margin: auto;
   width: 60%;
