--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,16 @@ a {
   color: black;
   cursor: default;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-temp {
+  font-size: 13px;
+}
+
+.weather-forecast-date {
+  color: blue;
+  font-size: 16px;
+}
